infra/policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-service-default-deny
spec:
  podSelector: { matchLabels: { app: payment-service } }
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector: { matchLabels: { name: edge } }
      ports: [{ protocol: TCP, port: 8081 }]
  egress:
    - to:
        - namespaceSelector: { matchLabels: { name: data } }
      ports:
        - { protocol: TCP, port: 5432 }
        - { protocol: TCP, port: 9092 }
    - to:
        - namespaceSelector: { matchLabels: { name: integration-egress } }
      ports: [{ protocol: TCP, port: 443 }]
